<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:descendantFocusability="beforeDescendants"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:id="@+id/flexboxHolder"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle">

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/recipient_group_FL"
            style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            app:alignContent="space_around"
            app:alignItems="stretch"
            app:flexWrap="wrap_reverse"
            app:showDivider="beginning|middle|end">

            <EditText
                android:id="@+id/editTextTags"
                android:layout_width="250dp"
                android:layout_height="32dp"
                android:background="@android:color/transparent"
                android:hint="work, conference-call, etc."
                android:imeOptions="actionSend"
                android:inputType="text"
                app:layout_flexGrow="1" />

        </com.google.android.flexbox.FlexboxLayout>
    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="noHideDescendants"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageButton7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:importantForAccessibility="no"
                android:maxWidth="30dp"
                android:maxHeight="30dp"
                android:minWidth="15dp"
                android:minHeight="15dp"
                android:padding="2dp"
                android:src="@color/purple_500"
                app:srcCompat="@color/purple_500"
                tools:srcCompat="@color/purple_500" />

            <ImageView
                android:id="@+id/imageButton8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:importantForAccessibility="no"
                android:maxWidth="30dp"
                android:maxHeight="30dp"
                android:minWidth="15dp"
                android:minHeight="15dp"
                android:padding="2dp"
                android:src="@color/purple_500"
                app:srcCompat="@color/purple_500" />

            <ImageView
                android:id="@+id/imageButton9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:importantForAccessibility="no"
                android:maxWidth="30dp"
                android:maxHeight="30dp"
                android:minWidth="15dp"
                android:minHeight="15dp"
                android:padding="2dp"
                android:src="@color/purple_500"
                app:srcCompat="@color/purple_500" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageButton6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:importantForAccessibility="no"
                android:maxWidth="30dp"
                android:maxHeight="30dp"
                android:minWidth="15dp"
                android:minHeight="15dp"
                android:padding="2dp"
                android:src="@color/purple_500"
                app:srcCompat="@color/purple_500" />

            <ImageView
                android:id="@+id/imageButton5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:importantForAccessibility="no"
                android:maxWidth="30dp"
                android:maxHeight="30dp"
                android:minWidth="15dp"
                android:minHeight="15dp"
                android:padding="2dp"
                android:src="@color/purple_500"
                app:srcCompat="@color/purple_500" />

            <ImageView
                android:id="@+id/imageButton4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:importantForAccessibility="no"
                android:maxWidth="30dp"
                android:maxHeight="30dp"
                android:minWidth="15dp"
                android:minHeight="15dp"
                android:padding="2dp"
                android:src="@color/purple_500"
                app:srcCompat="@color/purple_500" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageButton1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:importantForAccessibility="no"
                android:maxWidth="30dp"
                android:maxHeight="30dp"
                android:minWidth="15dp"
                android:minHeight="15dp"
                android:padding="2dp"
                android:src="@color/purple_500"
                app:srcCompat="@color/purple_500" />

            <ImageView
                android:id="@+id/imageButton2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:importantForAccessibility="no"
                android:maxWidth="30dp"
                android:maxHeight="30dp"
                android:minWidth="15dp"
                android:minHeight="15dp"
                android:padding="2dp"
                android:src="@color/purple_500"
                app:srcCompat="@color/purple_500" />

            <ImageView
                android:id="@+id/imageButton3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:importantForAccessibility="no"
                android:maxWidth="30dp"
                android:maxHeight="30dp"
                android:minWidth="15dp"
                android:minHeight="15dp"
                android:padding="2dp"
                android:src="@color/purple_500"
                app:srcCompat="@color/purple_500" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tag="endButton"
        android:text="@string/pomodoro_stop_button"
        android:visibility="invisible"
        app:backgroundTint="?attr/colorError"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:tag="startButton"
        android:text="@string/button_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:tag="timerDisplay"
        android:text="@string/pomodoro_timer_idle"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="00:00" />

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:hint="what's this session about"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="do not disturb"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/activityName"
        app:layout_constraintStart_toStartOf="@+id/activityName"
        app:layout_constraintTop_toBottomOf="@+id/activityName" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:paddingRight="10dp"
        android:text="tags"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/flexboxHolder"
        app:layout_constraintEnd_toStartOf="@+id/flexboxHolder"
        app:layout_constraintTop_toTopOf="@+id/flexboxHolder" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:text="notes"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/flexboxHolder"
        app:layout_constraintEnd_toStartOf="@+id/editTextTitle"
        app:layout_constraintTop_toTopOf="@+id/editTextTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>
