<resources>
    <string name="app_name">BeyondPomodoro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_pomodoro">Pomodoro session</string>
    <string name="menu_analytics">Analytics</string>
    <string name="button_start">Start</string>
    <string name="pomodoro_timer_idle" />
    <string name="pomodoro_stop_button">End</string>
    <string name="pomodoro_save_button">Save</string>
    <string name="dialog_end_session">Do you want to save this session?</string>
    <string name="end_session_save">Save</string>
    <string name="end_session_nosave">Discard</string>
    <string name="pomodoro_save_session_button">Save Session</string>
    <string name="pomodoro_pause_session_button">Pause</string>
    <string name="pomodoro_resume_session_button">Resume</string>
    <string name="pomodoro_start_session_button">Start</string>
    <string name="pomodoro_toast_session_complete">Session complete</string>
    <string name="dialog_change_time">Change session duration</string>
    <string name="dialog_change_time_ok">Set</string>
    <string name="dialog_session_time_ok">Set</string>
    <string name="pomodoro_end_break_button">Resume</string>
    <string name="pomodoro_break_end_message">Back</string>
    <string name="pomodoro_break_end">Back</string>
    <string name="menu_about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Beyond Pomodoro</string>
    <string name="alert_channel_name">alertBeyondPomodoro</string>
    <string name="alert_channel_description">Notifications for BeyondPomodoro</string>
    <string name="alert_channel_id">alertChannelBeyondPomodoro</string>
    <string name="persistent_channel_name">persistentBeyondPomodoro</string>
    <string name="persistent_channel_description">Status bar timer view for BeyondPomodoro</string>
    <string name="persistent_channel_id">persistentChannelBeyondPomodoro</string>
    <string name="menu_session_type">Activities</string>
    <string name="session_already_active_message">The session is already active. You can end it if you like.</string>
    <string name="create_new_session_type">Create new session type</string>
    <string name="hint_activity_name">name this activity</string>
    <string name="delete_activity_confirmation">Delete this activity?</string>
    <string name="delete_activity_yes">Yes</string>
    <string name="delete_activity_cancel">Cancel</string>
    <string name="cancel_current_activity_confirmation">There is an activity running already. Do you want to cancel it and start a new one?</string>
    <string name="cancel_activity_no">No</string>
    <string name="cancel_activity_yes">Yes, cancel running activity</string>
    <string name="pomodoro_discard_session">Discard session</string>
    <string name="notification_break_message">Break time. Stretch. Relax. Hydrate.</string>
    <string name="app_description">Ready for some pomodoro?</string>
</resources>