<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/sessionInfoFragment"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/menu_session_type" />
        <item
            android:id="@+id/aboutFragment"
            android:icon="@android:drawable/presence_online"
            android:title="@string/menu_about" />
    </group>
</menu>